--- a/botanical-bites/src/index.css
+++ b/botanical-bites/src/index.css
@@ -1,13 +1,25 @@
-body {
+/* src/index.css */
+@import './components/styles/tailwind.css';
+
+html, body {
   margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#root {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-image: url('./assets/space-background.jpg');
+    background-size: cover;
+
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
