--- a/botanical-bites/src/index.css
+++ b/botanical-bites/src/index.css
@@ -1,25 +1,46 @@
 /* src/index.css */
 @import './components/styles/tailwind.css';
 
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-
-#root {
-  position: relative;
-  width: 100%;
-  height: 100%;
+/* Container div to hold the background image */
+.background-container {
+  max-width: 90%; /* Adjust as needed */
+  background: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
+  border-radius: 10px; /* Rounded corners */
+  padding: 20px; /* Add some padding */
   background-image: url('./assets/space-background.jpg');
-    background-size: cover;
-
 }
 
-body {
+.centered-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 90%; /* Adjust as needed */
+  background: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
+  border-radius: 10px; /* Rounded corners */
+  padding: 20px; /* Add some padding */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  display: flex; /* Use Flexbox */
+  flex-direction: column; /* Stack child elements vertically */
+  align-items: center; /* Horizontally center the child elements */
+}
+
+.button-container {
+  margin-top: 20px; /* Add some space between button and other content */
+  display: flex; /* Use Flexbox */
+  justify-content: center; /* Horizontally center the button */
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh; /* Set height to viewport height */
+  overflow: hidden; /* Remove any scrollbars */
+  background-image: url('./assets/space-background.jpg');
+  background-size: cover;
+  display: flex; /* Use Flexbox */
+  justify-content: center; /* Horizontally center the content */
+  align-items: center; /* Vertically center the content */
 }
