--- a/botanical-bites/src/index.css
+++ b/botanical-bites/src/index.css
@@ -1,46 +1,56 @@
-/* src/index.css */
-@import './components/styles/tailwind.css';
-
-/* Container div to hold the background image */
-.background-container {
-  max-width: 90%; /* Adjust as needed */
-  background: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
-  border-radius: 10px; /* Rounded corners */
-  padding: 20px; /* Add some padding */
-  background-image: url('./assets/space-background.jpg');
+/* App.css */
+body {
+  background-color: #f3f4f6; /* Set body background color to grey */
 }
 
+.background-container {
+  /* Add styles for background-container */
+  background-image: url('./assets/space-background.jpg');
+  background-size: cover; /* Ensure the image covers the entire container */
+  background-position: center; /* Center the image */
+}
+
+/* Additional styles */
+
 .centered-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 90%; /* Adjust as needed */
-  background: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
-  border-radius: 10px; /* Rounded corners */
-  padding: 20px; /* Add some padding */
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  display: flex; /* Use Flexbox */
-  flex-direction: column; /* Stack child elements vertically */
-  align-items: center; /* Horizontally center the child elements */
+  /* Add styles for centered-content */
+}
+
+.title {
+  font-size: 1.875rem; 
+  font-weight: 600;   
+  margin-bottom: 1rem;
+}
+
+.description {
+  color: #4B5563; 
+  margin-bottom: 1rem; 
 }
 
 .button-container {
-  margin-top: 20px; /* Add some space between button and other content */
-  display: flex; /* Use Flexbox */
-  justify-content: center; /* Horizontally center the button */
+  /* Add styles for button-container */
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  height: 100vh; /* Set height to viewport height */
-  overflow: hidden; /* Remove any scrollbars */
-  background-image: url('./assets/space-background.jpg');
-  background-size: cover;
-  display: flex; /* Use Flexbox */
-  justify-content: center; /* Horizontally center the content */
-  align-items: center; /* Vertically center the content */
+.btn {
+  background-color: #3B82F6;
+  color: #fff;             
+  font-weight: 600;    
+  padding: 0.5rem 1rem;   
+  border-radius: 9999px;     
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05), 0 2px 4px 0 rgba(0, 0, 0, 0.1); 
+  outline: none; 
+}
+
+.btn:hover {
+  background-color: #2563EB;
+}
+
+.arrow-icon {
+  width: 1.5rem;  
+  height: 1.5rem; 
+  margin-left: 0.5rem; 
 }
