--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -4,23 +4,26 @@
     align-items: center;
     justify-content: flex-end;
     margin: 10px;
-    padding: 20px;
+    padding: 15px;
     width: 100%;
     max-height: 400px;
     min-width: 100px;
     background-color: white;
-    z-index: 1;
 }
 
 .product-rating {
     display: flex;
+    z-index: 2;
+    justify-content: center;
 }
 
-product>img {
+.product>img {
     max-height: 200px;
     width: 100%;
     object-fit: contain;
-    margin: 20px 0 0 15px;
+    margin: 35px 0 0 15px;
+    position: relative;
+    z-index: 1;
 }
 
 .product>button {
