--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -13,6 +13,7 @@
     align-items: center;
     color: mediumseagreen;
     margin: 0 25px;
+    cursor: pointer;
 }
 
 .header-logo-icon {
@@ -44,6 +45,7 @@
     padding: 5px;
     height: 22px !important;
     background-color: aquamarine;
+    cursor: pointer;
 }
 
 .header-nav {
@@ -57,6 +59,7 @@
     margin-left: 10px;
     margin-right: 10px;
     color: white;
+    cursor: pointer;
 }
 
 .nav-item-greeting {
